hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_darray1.php.exp
File "explicit_type_collection_passing_darray1.php", line 6, characters 3-13:
  dict<arraykey, bool>
File "explicit_type_collection_passing_darray1.php", line 7, characters 10-11:
Invalid argument (Typing[4110])
  File "explicit_type_collection_passing_darray1.php", line 3, characters 24-29:
  Expected `string`
  File "explicit_type_collection_passing_darray1.php", line 5, characters 8-41:
  But got `arraykey` because type parameter `Tk` of `HH\dict` could not be determined. Please add explicit type parameters to the invocation of `HH\dict`
